--- a/scss/_combos.scss
+++ b/scss/_combos.scss
@@ -1,17 +1,18 @@
 .bloque-combos{
-    position: sticky;
-    top: 0;
-    z-index: 3;
+    @extend .bloque-indicador;
     .bloque__combos{
-        background-color: rgb(66, 65, 65);
-        background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-        color: white;
-        font-family: $letraPrincipal;
-        font-size: 3rem;
-        text-align: center;
-        border-top: solid 5px black;
-        border-bottom: solid 5px black;
+        @extend .indicador;
     }
+}
+
+.parrafos{
+    font-family: $letraPrincipal;
+    width: 100%;
+    font-size: 1.5rem;
+    border:dashed 3px black;
+    padding: 5px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .combos{
@@ -40,13 +41,7 @@
         grid-area: combo4;
     }
     .combos__p{
-        font-family: $letraPrincipal;
-        width: 100%;
-        font-size: 1.5rem;
-        border:dashed 3px black;
-        padding: 5px;
-        text-align: center;
-        margin-top: 10px;
+        @extend .parrafos;
         background-color: #f5b528;
     }
     .combos-imagen{
