--- a/scss/_precios.scss
+++ b/scss/_precios.scss
@@ -1,15 +1,7 @@
-.precios{
-    position: sticky;
-    top: 0;
+.bloque-precios{
+    @extend .bloque-indicador;
     .bloque__precios{
-        background-color: rgb(66, 65, 65);
-        background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-        color: white;
-        font-family: $letraPrincipal;
-        font-size: 3rem;
-        text-align: center;
-        border-top: solid 5px black;
-        border-bottom: solid 5px black;
+        @extend .indicador;
     }
 }
 .precios-pagos{
@@ -78,6 +70,7 @@
                     background-color: black;
                     padding: 20px 15px;
                     text-transform: uppercase;
+                    text-align: center;
                     &:hover{
                         background-color: brown;
                     }
