--- a/scss/_proximos-estrenos.scss
+++ b/scss/_proximos-estrenos.scss
@@ -1,16 +1,7 @@
-/** PROXIMOS ESTRENOS **/
-.cartelera{
-    position: sticky;
-    top: 0;
+.bloque-proximos-estrenos{
+    @extend .bloque-indicador;
     .bloque__proximos-estrenos{
-        background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
-        color: white;
-        font-family: $letraPrincipal;
-        font-size: 3rem;
-        text-align: center;
-        margin:0px 0px;
-        border-top: solid 5px black;
-        border-bottom: solid 5px black;
+        @extend .indicador;
     }
 }
 .h-100{
