--- a/scss/_precios.scss
+++ b/scss/_precios.scss
@@ -37,6 +37,7 @@
                 background-color: black;
                 padding: 20px 15px;
                 text-transform: uppercase;
+                text-align: center;
                 &:hover{
                     background-color: brown;
                 }
