--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -5,7 +5,7 @@
     }
 }
 .parrafo-consultas{
-    font-family: 'Staatliches', cursive;
+    font-family: $letraPrincipal;
     font-size: 3rem;
     border:dashed 3px black;
     padding: 3px;
