--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -311,6 +311,7 @@ body{
                 }
                 .caracteristicas{
                     grid-area: caracteristicas;
+                    margin-right: 5px;
                 }
                 .sinopsis{
                     grid-area: sinopsis;
