--- a/css/estilos.css
+++ b/css/estilos.css
@@ -523,6 +523,9 @@ footer .redes img {
   .caja .contenedorTotal {
     margin-bottom: 20px;
     margin-top: 20px;
+    background-color: rgb(247, 232, 232);
+    padding: 10px;
+    border: dashed 1px black;
   }
   .caja .contenedorTotal .caracteristicas {
     width: 100%;
@@ -551,6 +554,9 @@ footer .redes img {
     grid-template-rows: 0.5fr;
     grid-template-areas: "imagen caracteristicas" "sinopsis sinopsis";
     margin-top: 20px;
+    background-color: rgb(247, 232, 232);
+    padding: 10px;
+    border: dashed 1px black;
   }
   .caja .contenedorTotal .img-1 {
     grid-area: imagen;
